# agentos

./: .gitignore  CLAUDE.md  ISSUES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement_issue.md
docs/: ANALYSIS.md  IMPROVEMENT_PLANS.md  README.md  comparison.md  integration.md  memory-hierarchy.md  phase_1_explanation.md  phase_4_explanation.md  phase_5_explanation.md  scheduler-io.md
docs/internal/: PHASE1_REVIEW.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE6_SUMMARY.md  PROJECT_PLAN.md
docs/summaries/: PHASE1_FIXES.md  PHASE2_SUMMARY.md  PHASE5_SUMMARY.md
examples/: integration_demo.py  phase2_demo.py  phase4_demo.py  phase5_demo.py  scheduler_demo.py  semantic_slicing_demo.py  test_system.py  visualize_attention.py  visualize_clusters.py
src/agentos/: __init__.py  agent.py  agentos.py  auto_tuner.py  cli.py  profiles.py
src/agentos/common/: __init__.py  circuit_breaker.py  health.py
src/agentos/eval/: __init__.py  metrics.py  viz.py
src/agentos/io/: __init__.py  interrupt_handler.py  interrupt_table.py  peripherals.py
src/agentos/kernel/: __init__.py  reasoning_kernel.py
src/agentos/memory/: __init__.py  importance.py  page_table.py  scoring.py  smmu.py  types.py
src/agentos/memory/slicing/: boundary_detector.py  cid_calculator.py  slicer.py  types.py
src/agentos/memory/tiers/: __init__.py  l1_cache.py  l2_ram.py  l3_storage.py
src/agentos/models/: __init__.py  transformers_backend.py
src/agentos/scheduler/: __init__.py  cognitive_scheduler.py  rcb.py  types.py
src/agentos/sync/: __init__.py  distributed_memory.py  drift_tracker.py  perception_alignment.py  reconciliation.py  sync_pulse.py  types.py
src/agentos/synthesis/: __init__.py  semantic_synthesizer.py  types.py
tests/: test_phase1_basic.py
